--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "vite-project",
-  "version": "0.0.0",
+  "projectName": "<%= name %>",
+  "description": "<%= description %>",
+  "author": "<%= author %>",
+  "templateName": "vitue-admin",
   "private": true,
   "scripts": {
     "dev": "vite",
